# the-stats-duck

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/v1.2.2/wasm_eh/: stats_duck.duckdb_extension.wasm
docs/v1.2.2/wasm_mvp/: stats_duck.duckdb_extension.wasm
docs/v1.2.2/wasm_threads/: stats_duck.duckdb_extension.wasm
docs/v1.5.1/wasm_eh/: stats_duck.duckdb_extension.wasm
docs/v1.5.1/wasm_mvp/: stats_duck.duckdb_extension.wasm
docs/v1.5.1/wasm_threads/: stats_duck.duckdb_extension.wasm
notes/engineering/: 2026-06-volatile-and-rng-bias.md  README.md
patches/: 0001-fmt-secure-scl-msvc-v145.patch  README.md
scripts/zig-shims/: zig-cc.cmd  zig-cxx.cmd  zig-cxx.py
spike/marks_demo/: marks_demo_extension.cpp
src/: adjust_p_function.cpp  anova_function.cpp  auto_bin_function.cpp  bootstrap_function.cpp  chisq_function.cpp  corr_matrix_function.cpp  correlation_function.cpp  distribution_functions.cpp  ggsql.cpp  ggsql_grammar.cpp  ggsql_marks.cpp  ggsql_parser_extension.cpp  ks_test_function.cpp  lm_function.cpp  nonparametric_function.cpp  normality_function.cpp  poibin_function.cpp  random_sampling_function.cpp  read_stat_function.cpp  read_stat_types.cpp  sas_export_function.cpp  sign_test_function.cpp  stats_duck_extension.cpp  summary_stats_function.cpp  table_one_function.cpp  ttest_agg_function.cpp  ttest_compute.cpp  ttest_function.cpp
src/include/: adjust_p_function.hpp  anova_function.hpp  auto_bin_function.hpp  bootstrap_function.hpp  chisq_function.hpp  corr_matrix_function.hpp  correlation_function.hpp  distribution_functions.hpp  distributions.hpp  ggsql.hpp  ggsql_grammar.hpp  ggsql_marks.hpp  ggsql_marks_internal.hpp  ggsql_parser_extension.hpp  ks_test_function.hpp  lm_function.hpp  nonparametric_function.hpp  normality_function.hpp  poibin_function.hpp  random_sampling_function.hpp  read_stat_function.hpp  read_stat_types.hpp  sas_export_function.hpp  sign_test_function.hpp  stats_duck_extension.hpp  stats_validation.hpp  summary_stats_function.hpp  t_distribution.hpp  ttest_agg_function.hpp  ttest_compute.hpp  ttest_function.hpp
test/sql/: adjust_p.test  auto_bin.test  bootstrap.test  chisq_independence.test  corr_matrix.test  ggsql_mark_registry.test  ggsql_spike.test  ggsql_visualize_aesthetics.test  ggsql_visualize_bar.test  ggsql_visualize_expressions.test  ggsql_visualize_facet.test  ggsql_visualize_facet_2d.test  ggsql_visualize_histogram.test  ggsql_visualize_line.test  ggsql_visualize_multi_layer.test  ggsql_visualize_new_marks.test  ggsql_visualize_other_marks.test  ggsql_visualize_point.test  ggsql_visualize_scale.test  ggsql_visualize_stat.test  ggsql_visualize_stats_marks.test  ggsql_visualize_text.test  ggsql_visualize_titles.test  ggsql_visualize_tokenizer.test  ggsql_visualize_type_overrides.test  ks_test.test  lm.test  mann_whitney.test  poibin_cdf.test  random_sampling.test  read_stat.test  sas_export_labels.test  sas_export_por.test  sas_export_sas7bdat.test  sas_export_sav.test  sas_export_xpt.test  shapiro_wilk.test  sign_test.test  table_one.test  ttest_1samp.test  (+6 more)
